// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoryCollectionItem should match snapshot with className 1`] = `
<li
  className="class"
>
  <a
    className="css-rfvsuz-StyledLinkWrapper ercjopt1"
    href="https://www.economist.com/the-economist-explains/2018/05/15/who-has-the-right-to-judge-americans"
  >
    <div
      className="css-xpxzo4-StyledImgContainer ercjopt2"
    >
      <amp-img
        alt="About us"
        height={720}
        layout="responsive"
        sizes="(min-width: 640px) calc(640px / 2 - 2 * 0.5em), calc(50vw - 2 * 0.5em)"
        src="https://www.economist.com/sites/default/files/20180512_BLP509.jpg"
        srcset="https://www.economist.com/sites/default/files/imagecache/200-width/sites/default/files/20180512_BLP509.jpg 200w,
https://www.economist.com/sites/default/files/imagecache/300-width/sites/default/files/20180512_BLP509.jpg 300w,
https://www.economist.com/sites/default/files/imagecache/400-width/sites/default/files/20180512_BLP509.jpg 400w,
https://www.economist.com/sites/default/files/imagecache/640-width/sites/default/files/20180512_BLP509.jpg 640w,
https://www.economist.com/sites/default/files/imagecache/800-width/sites/default/files/20180512_BLP509.jpg 800w,
https://www.economist.com/sites/default/files/imagecache/1000-width/sites/default/files/20180512_BLP509.jpg 1000w,
https://www.economist.com/sites/default/files/imagecache/1200-width/sites/default/files/20180512_BLP509.jpg 1200w,
https://www.economist.com/sites/default/files/imagecache/1280-width/sites/default/files/20180512_BLP509.jpg 1280w,
https://www.economist.com/sites/default/files/imagecache/1600-width/sites/default/files/20180512_BLP509.jpg 1600w"
        width={1280}
      />
    </div>
    <div
      className="css-1p0z4f3-StyledTextContainer ercjopt0"
    >
      <p
        className="css-m4ovun-StyledHeader e10thz6k2"
      >
        <span
          className="css-zdexlw-StyledSubHeadline-subHeadlineStyles e10thz6k1"
        >
          The Economist explains
        </span>
        <span
          className="css-1wbs5nn-StyledHeadline-headlineStyles e10thz6k0"
        >
          Who has the right to judge Americans?
        </span>
      </p>
    </div>
  </a>
  <a
    className="ercjopt3 css-13kn2e2-StyledLink-StyledSectionLink-StyledSectionLink e1pwg3wv0"
    href="https://www.economist.com/help/about-us"
  >
    About us
    <span
      className={undefined}
    >
      <svg
        version="1.1"
        viewBox="0 0 48 48"
        x="0px"
        xmlSpace="preserve"
        xmlns="http://www.w3.org/2000/svg"
        y="0px"
      >
        <polygon
          points="17.6,14.8 20.4,12 32.4,24 20.4,36 17.6,33.2 26.7,24 	"
        />
      </svg>
    </span>
  </a>
</li>
`;

exports[`StoryCollectionItem should match snapshot without className 1`] = `
<li
  className=""
>
  <a
    className="css-rfvsuz-StyledLinkWrapper ercjopt1"
    href="https://www.economist.com/the-economist-explains/2018/05/15/who-has-the-right-to-judge-americans"
  >
    <div
      className="css-xpxzo4-StyledImgContainer ercjopt2"
    >
      <amp-img
        alt="About us"
        height={720}
        layout="responsive"
        sizes="(min-width: 640px) calc(640px / 2 - 2 * 0.5em), calc(50vw - 2 * 0.5em)"
        src="https://www.economist.com/sites/default/files/20180512_BLP509.jpg"
        srcset="https://www.economist.com/sites/default/files/imagecache/200-width/sites/default/files/20180512_BLP509.jpg 200w,
https://www.economist.com/sites/default/files/imagecache/300-width/sites/default/files/20180512_BLP509.jpg 300w,
https://www.economist.com/sites/default/files/imagecache/400-width/sites/default/files/20180512_BLP509.jpg 400w,
https://www.economist.com/sites/default/files/imagecache/640-width/sites/default/files/20180512_BLP509.jpg 640w,
https://www.economist.com/sites/default/files/imagecache/800-width/sites/default/files/20180512_BLP509.jpg 800w,
https://www.economist.com/sites/default/files/imagecache/1000-width/sites/default/files/20180512_BLP509.jpg 1000w,
https://www.economist.com/sites/default/files/imagecache/1200-width/sites/default/files/20180512_BLP509.jpg 1200w,
https://www.economist.com/sites/default/files/imagecache/1280-width/sites/default/files/20180512_BLP509.jpg 1280w,
https://www.economist.com/sites/default/files/imagecache/1600-width/sites/default/files/20180512_BLP509.jpg 1600w"
        width={1280}
      />
    </div>
    <div
      className="css-1p0z4f3-StyledTextContainer ercjopt0"
    >
      <p
        className="css-m4ovun-StyledHeader e10thz6k2"
      >
        <span
          className="css-zdexlw-StyledSubHeadline-subHeadlineStyles e10thz6k1"
        >
          The Economist explains
        </span>
        <span
          className="css-1wbs5nn-StyledHeadline-headlineStyles e10thz6k0"
        >
          Who has the right to judge Americans?
        </span>
      </p>
    </div>
  </a>
  <a
    className="ercjopt3 css-13kn2e2-StyledLink-StyledSectionLink-StyledSectionLink e1pwg3wv0"
    href="https://www.economist.com/help/about-us"
  >
    About us
    <span
      className={undefined}
    >
      <svg
        version="1.1"
        viewBox="0 0 48 48"
        x="0px"
        xmlSpace="preserve"
        xmlns="http://www.w3.org/2000/svg"
        y="0px"
      >
        <polygon
          points="17.6,14.8 20.4,12 32.4,24 20.4,36 17.6,33.2 26.7,24 	"
        />
      </svg>
    </span>
  </a>
</li>
`;
